--- a/cs6460/_config.yml
+++ b/cs6460/_config.yml
@@ -1,3 +1,18 @@
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+defaults:
+ -
+  scope:
+    path: ""
+    type: "pages"
+  values:
+    layout: "my-site"
+ -
+  scope:
+    path: "projects"
+    type: "pages" # previously `page` in Jekyll 2.2.
+  values:
+    layout: "project" # overrides previous default layout
+    author: "Mr. Hyde"
