--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,18 @@
 name: Robert Bobkoskie
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
+
+defaults:
+ -
+  scope:
+    path: ""
+    type: "pages"
+  values:
+    layout: "my-site"
+ -
+  scope:
+    path: "projects"
+    type: "pages" # previously `page` in Jekyll 2.2.
+  values:
+    layout: "project" # overrides previous default layout
+    author: "Mr. Hyde"
