MOVE FILE FROM BUILD

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,18 @@
-name: Robert Bobkoskie
-url: https://robert-bobkoskie.github.io
+name: Hank Quinlan, Horrible Cop
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
 
-source: app
-include: [_layouts]
-exclude: [README.md]
+defaults:
+ -
+  scope:
+    path: ""
+    type: "pages"
+  values:
+    layout: "my-site"
+ -
+  scope:
+    path: "projects"
+    type: "pages" # previously `page` in Jekyll 2.2.
+  values:
+    layout: "project" # overrides previous default layout
+    author: "Mr. Hyde"
